--- a/cmdline.pod
+++ b/cmdline.pod
@@ -1,6 +1,6 @@
 *Tapper frontend commands*
 
-=head1 tapper-testrun
+=head1 tapper
 
 Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
@@ -9,7 +9,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns delete [ --verbose | --really | --id=s@ ]
+ tapper testrun-delete [ --verbose | --force | --id=s@ ]
 
 	--verbose    some more informational output
 	--really     really execute the command
@@ -24,7 +24,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns deleteprecondition [ --verbose | --really | --id=s@ ]
+ tapper precondition-delete [ --verbose | --force | --id=s@ ]
 
 	--verbose    some more informational output
 	--really     really execute the command
@@ -37,7 +37,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns listprecondition [ --verbose|v | --name=s | --really ]
+ tapper precondition-list [ --verbose|v | --name=s ]
 
 	-v --verbose   some more informational output
 	--name         TEXT; name of the queue to be changed
@@ -50,16 +50,13 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns listprecondition [ --verbose|v | --running|r |
-                                     --all|a | --colnames | 
-                                     --host=s@ | --schedule|s | 
-                                     --id|i=i | --queue=s@ | 
+ tapper testrun-list [ --verbose|v | --running|r |
+                                     --host=s@ | --schedule|s |
+                                     --id|i=i | --queue=s@ |
                                      --finished|f | --prepare|p ]
 
 	-v --verbose    print all output, without only print ids
 	-r --running    list running testruns, OR combined with other state filters
-	-a --all        list all testruns
-	--colnames      print out column names
 	--host          list testruns assigned to this queue, OR combined with other hosts,
                         AND combined with other filters
 	-s --schedule   list scheduled testruns, OR combined with other state filters
@@ -75,7 +72,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns listhost --verbose|v | --free | --name=s | --active | --queue=s@
+ tapper host-list --verbose|v | --free | --name=s | --active | --queue=s@
 
 	-v --verbose   show all available information; without only show names
 	--free         list free hosts
@@ -90,17 +87,15 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns listprecondition [ --quotevalues|q | --verbose|v | 
-                                     --testrun=i@ | --nonewlines | 
-                                     --id|i=i@ | --all|a | --colnames|c ]
+ tapper precondition-list [ --quotevalues|q | --verbose|v |
+                                     --testrun=i@ | --nonewlines |
+                                     --id|i=i@ ]
 
 	-q --quotevalues   put quotes around the values
 	-v --verbose       Show all information of preconditions, otherwise only show ids
 	--testrun          assigned to given testrun id
 	--nonewlines       escape newlines in values to avoid multilines
 	-i --id            list particular precondition
-	-a --all           list all preconditions
-	-c --colnames      print out column names
 
 
 =head3 Synopsis
@@ -110,7 +105,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns listqueue --minprio=s | --verbose|v | --maxprio=s
+ tapper queue-list --minprio=s | --verbose|v | --maxprio=s
 
 	--minprio      INT; queues with at least this priority level
 	-v --verbose   show all available information; without only show names
@@ -123,9 +118,9 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns new [ --requested_host=s@ | --requested_feature=s@ | 
-                        --topic=s | --queue=s | --notes=s | 
-                        --shortname=s | --owner=s | --wait_after_tests=s | 
+ tapper testrun-new [ --requested_host=s@ | --requested_feature=s@ |
+                        --topic=s | --queue=s | --notes=s |
+                        --shortname=s | --owner=s | --wait_after_tests=s |
                         --macroprecond=s | -Dkey=val | --auto_rerun]*
 
 	--priority                Boolean; This is a very important testrun that
@@ -135,17 +130,17 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 	--earliest                STRING, default=now; don't start testrun before
                                   this time (format: YYYY-MM-DD hh:mm:ss or now)
 	--requested_feature       String; description of one requested feature of a
-                                  matching host for this testrequest; 
+                                  matching host for this testrequest;
 				  multiple requested features are AND evaluated,
                                   i.e. each must fit; not evaluated if a matching
                                   requested host is found already
 	--rerun_on_error          INT, retry this testrun this many times if an error occurs
 	--precondition            assigned precondition ids
-	--requested_host          String; name one possible host for this testrequest; 
-				  multiple requested hosts are OR evaluated, 
+	--requested_host          String; name one possible host for this testrequest;
+				  multiple requested hosts are OR evaluated,
                                   i.e. each is appropriate
-	--topic                   STRING, default=Misc; one of: 
-                                  Kernel, Xen, KVM, Hardware, Distribution, 
+	--topic                   STRING, default=Misc; one of:
+                                  Kernel, Xen, KVM, Hardware, Distribution,
                                   Benchmark, Software, Misc
 	--owner                   STRING, default=$USER; user login name
 	--macroprecond            STRING, use this macro precondition file
@@ -163,10 +158,10 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns newqueue --name=s [ --queue=s@ --active=s --verbose ]*
+ tapper queue-new --name=s [ --active --verbose ]*
 
 	--verbose     some more informational output
-	--active      INT; MCP can use this host, default 0
+	--active      MCP can use this host, default 0
 	--name        TEXT; name
 
 =head3 Synopsis
@@ -176,13 +171,13 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testrun newprecondition ( --condition=s | --condition_file=s )
-                                 [ --shortname=s ] [ --timeout=n ] [ --precondition=n ]* 
+ tapper precondition-new ( --condition=s | --condition_file=s )
+                                 [ --shortname=s ] [ --timeout=n ] [ --precondition=n ]*
 
 	--verbose             some more informational output
 	--timeout             INT; stop trying to fullfill this precondition after timeout second
 	--condition           TEXT; condition description in YAML format (see Spec)
-	--condition_file      STRING; filename from where to read condition, 
+	--condition_file      STRING; filename from where to read condition,
                               use - to read from STDIN
 	--shortname           TEXT; shortname that overrides the one in the yaml
 	--precondition        INT; assigned pre-precondition ids
@@ -194,7 +189,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns newqueue --name=s --priority=s [ --verbose ]
+ tapper queue-new --name=s --priority=s [ --verbose ]
 
 	--priority      INT; priority
 	--verbose       some more informational output
@@ -208,7 +203,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns newscenario --file=s
+ tapper scenario-new --file=s
 
 	--verbose    some more informational output
 	-D           Define a key=value pair used in macro preconditions
@@ -222,44 +217,27 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns rerun --testrun=s [ --notes=s ]?
+ tapper testrun-rerun --id=i [ --notes=s ]?
 
 	--verbose      some more informational output
 	--notes        TEXT; notes
-	--testrun      INT, testrun to start again
+	--id           INT, testrun to start again
 
 =head3 Synopsis
 
 
-=head2 show: Show details of a testrun
+=head2 update: Update a testrun
 
 =head3 Usage
 
- tapper-testruns show [ --verbose | --id=s@ ]
-
-	--verbose    some more informational output
-	--id         list particular testruns
-
-=head3 Synopsis
-
-
-=head2 update: Create a new testrun
-
-=head3 Usage
-
- tapper-testruns update --id=s [ --hostname=s | --topic=s | --notes=s | --shortname=s | --owner=s | --wait_after_tests=s ]*
+ tapper testrun-update --id=s [ --hostname=s | --topic=s | --auto-rerun | --no-auto-rerun | --status=s --verbose ]*
 	--verbose               some more informational output
-	--notes                 TEXT; notes
-	--shortname             TEXT; shortname
 	--topic                 STRING, default=Misc; one of: Kernel, Xen, KVM,
                                 Hardware, Distribution, Benchmark, Software, Misc
-	--hostname              INT; the hostname on which the test should be run
-	--owner                 STRING, default=$USER; user login name
-	--wait_after_tests      BOOL, default=0; wait after testrun for human investigation
-	--earliest              STRING, default=now; don't start testrun before this time 
-                                (format: YYYY-MM-DD hh:mm:ss or now)
-	--precondition          assigned precondition ids
 	--id                    INT; the testrun id to change
+    --status                Set testrun to given status, can be one of 'prepare', 'schedule', 'finished'.";
+    --auto-rerun            Activate auto-rerun on testrun. ";
+    --no-auto-rerun         Activate auto-rerun on testrun";
 
 =head3 Synopsis
 
@@ -268,9 +246,9 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testrun updateprecondition --id=s [ --shortname=s | 
-                                             --condition=s | 
-                                             --condition_file=s ) 
+ tapper precondition-update --id=s [ --shortname=s |
+                                             --condition=s |
+                                             --condition_file=s )
 
 	-v --verbose          some more informational output
 	--shortname           TEXT; shortname
@@ -289,7 +267,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 
 =head3 Usage
 
- tapper-testruns updatequeue --name=s --priority=s [ --verbose ]
+ tapper queue-update --name=s --priority=s [ --verbose ]
 
 	-p --priority     INT; priority
 	-v --verbose      some more informational output
@@ -315,7 +293,7 @@ Tool for accessing testrun database, scheduler, queues, hosts, etc.
 	--filename          STRING; alternate file name, especially when reading from STDIN
 	--reportserver      STRING; use this host for upload
 	--reportport        STRING; use this port for upload
-	--contenttype       STRING; content-type, default 'plain', 
+	--contenttype       STRING; content-type, default 'plain',
                             use 'application/octed-stream' for binaries
 
 =head3 Synopsis
